[gd_scene load_steps=3 format=2]

[ext_resource path="res://combatants/Combatant.tscn" type="PackedScene" id=1]
[ext_resource path="res://combatants/bat/Bat.gd" type="Script" id=3]

[node name="Bat" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
self_modulate = Color( 0.27451, 0.235294, 0.235294, 1 )
scale = Vector2( 0.2, 0.2 )

[node name="AttackTimer" type="Timer" parent="." index="2"]
wait_time = 1.3

[node name="MoveTimer" type="Timer" parent="." index="3"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
